<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/no_contact_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/no_contact_image_content_desc"
            android:src="@drawable/no_contact" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xmedium"
            android:text="@string/no_contact_title"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/no_contact_content"
            android:textColor="@color/color_on_surface_emphasis_medium"
            android:textAppearance="@style/TextAppearance.InstantChat.Subtitle2"/>

    </LinearLayout>

</layout>
